--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,6 @@
 spring.application.name=person-api
 
-spring.datasource.url=jdbc:mysql://localhost:3306/person_api?useSSL=false&serverTimezone=UTC
-spring.datasource.username=Developer
-spring.datasource.password=12345678
+spring.profiles.active=test
 
-spring.jpa.hibernate.ddl-auto=created
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.open-in-view=true
 
