--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,3 @@
-spring.application.name=person-api
-
 spring.datasource.url=jdbc:mysql://localhost:3306/person_api?useSSL=false&serverTimezone=UTC
 spring.datasource.username=Developer
 spring.datasource.password=12345678
@@ -8,3 +6,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Scripts de dados (insert)
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:sql/person_insert.sql
