--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/person_api?useSSL=false&serverTimezone=UTC
+spring.datasource.username=Developer
+spring.datasource.password=12345678
 
-spring.application.name=person-api
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
-spring.profiles.active=test
-
-spring.jpa.open-in-view=true
+# Scripts de dados (insert)
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:sql/person_insert.sql
