--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.32</version> <!-- última versão estável (2025) -->
+            <version>1.18.32</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
