--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.jpa.properties.hibernate.format_sql=true
 # Scripts de dados (insert)
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:sql/person_insert.sql
+
+# Define o nível global do log (TRACE, DEBUG, INFO, WARN, ERROR)
+logging.level.root=INFO
+
+# Define o diretório e nome do arquivo de log
+logging.file.name=logs/app.log
+
+# Define o formato da saída no log
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
