--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,2 +1,38 @@
-log.person.findAll=Listar todas as pessoas cadastradas
-log.person.findById=Buscar pessoa com o ID passado
+# Logs para findAll
+log.person.findAll.start=Iniciando a listagem de todas as pessoas
+log.person.findAll.result=Total de pessoas encontradas: {0}
+
+# Logs para findById
+log.person.findById.start=Iniciando busca da pessoa com ID: {0}
+log.person.findById.notFound=Pessoa não encontrada para ID: {0}
+log.person.findById.success=Pessoa encontrada com o ID: {0}
+
+# Logs para findByCpf
+log.person.findByCpf.start=Iniciando busca da pessoa com CPF: {0}
+log.person.findByCpf.notFound=Pessoa não encontrada para CPF: {0}
+log.person.findByCpf.success=Pessoa encontrada com o CPF: {0}
+
+# Logs para findByPrefix
+log.person.findByPrefix.start=Iniciando busca das pessoas com prefixo: {0}
+log.person.findByPrefix.invalid=Prefixo inválido: {0}
+log.person.findByPrefix.success=Pessoas encontradas com prefixo: {0}
+log.person.findByPrefix.count=Pessoas encontradas para prefixo '{0}': {1}
+
+# Logs para insert
+log.person.insert.start=Iniciando o cadastro de nova pessoa
+log.person.insert.cpfExists=CPF já existente: {0}
+log.person.insert.success=Pessoa adicionada com o ID: {0}
+
+# Logs para delete
+log.person.delete.start=Iniciando exclusão da pessoa com ID: {0}
+log.person.delete.notFound=Pessoa não encontrada para ID: {0}
+log.person.delete.success=Pessoa deletada com o ID: {0}
+
+# Logs para update
+log.person.update.start=Atualizando pessoa com ID: {0}
+log.person.update.notFound=Pessoa não encontrada para atualização. ID: {0}
+log.person.update.cpfExists=CPF duplicado detectado durante atualização: {0}
+log.person.update.success=Pessoa atualizada com sucesso: ID {0}
+
+# Logs para updateData
+log.person.updateData.start=Dados passiveis de atualizaçao
