--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:sql/person_insert.sql
 
+spring.data.mongodb.uri=mongodb://localhost:27017/person_api
+
 # Define o nível global do log (TRACE, DEBUG, INFO, WARN, ERROR)
 logging.level.root=INFO
 
