comunicacao de microserviços

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:sql/person_insert.sql
 
-spring.data.mongodb.uri=mongodb://localhost:27017/person_api
-
 # Define o nível global do log (TRACE, DEBUG, INFO, WARN, ERROR)
 logging.level.root=INFO
 
@@ -24,3 +22,5 @@ logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %m
 
 # arquivo de mensagens (messageProperties)
 spring.messages.basename=messages
+
+car.client.url=http://localhost:8090
