--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,9 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
 # arquivo de mensagens (messageProperties)
-spring.messages.basename=messages
+spring.messages.basename=message
+spring.messages.encoding=UTF-8
+spring.messages.fallback-to-system-locale=false
+
 
 car.client.url=http://localhost:8090
